--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,12 +21,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 2rem;
-    padding-top: 1.5rem;
+    padding-bottom: 2.5vh;
+    padding-top: 2vh;
     background-color: rgb(91, 100, 102);
-    width: 22.5%;
+    width: 40vh;
+    height: auto;
     margin: 0 auto;
-    border-radius: 5%;
+    border-radius: 2vh;
 }
 
 .calc {
@@ -34,7 +35,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5vh;
 }
 
 .title {
@@ -45,7 +46,7 @@ body {
 }
 
 .symbols {
-    padding-left: 1rem;
+    padding-left: 1.5vh;
 }
 
 .symbols .symbol {
@@ -54,10 +55,10 @@ body {
 }
 
 .calculator .bt {
-    width: 70px;
-    height: 70px;
-    margin: 0.2rem;
-    border-radius: 1rem;
+    width: 7vh;
+    height: 7vh;
+    margin: 0.4vh;
+    border-radius: 1.5vh;
     border-color: transparent;
     cursor: pointer;
 }
@@ -67,8 +68,8 @@ body {
 }
 
 .screen {
-    margin-bottom: 1.5rem;
-    width: 70%;
+    margin-bottom: 1.5vh;
+    width: 30vh;
 }
 
 .screen p {
@@ -76,29 +77,35 @@ body {
     align-items: center;
     justify-content: right;
     font-family: 'Montserrat';
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     width: 100%;
-    padding-right: 1rem;
+    padding-right: 1vh;
 }
 
 .calcScreen {
     display: flex;
     justify-content: center;
     background-color: rgb(236, 236, 236);
-    height: 4rem;
+    height: 7vh;
     width: 100%;
     z-index: 1000;
-    border-radius: 1rem;
+    border-radius: 1vh;
 }
 
 .clear {
-    width: 100px;
-    height: 50px;
+    width: 10vh;
+    height: 5vh;
     cursor: pointer;
-    border-radius: 1rem;
+    border-radius: 1vh;
     border-color: transparent;
 }
 
 .clear:hover {
     background-color: rgb(206, 229, 250);
+}
+
+@media screen and (max-width: 1200px) {
+    .calculator {
+        width: 20%;
+    }
 }
